[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tornet"
version = "2.0.2"
description = "Advanced Tor Network Controller for IP Rotation and Anonymity"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }

authors = [
    { name = "ByteBreach", email = "mrfidal@proton.me" }
]

keywords = [
    "tor",
    "anonymity",
    "privacy",
    "security",
    "proxy",
    "networking",
    "ip-rotation"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking"
]

dependencies = [
    "requests>=2.28.0",
    "PySocks>=1.7.1",
    "PyYAML>=6.0",
    "schedule>=1.1.0",
    "stem>=1.8.0"
]

[project.urls]
Homepage = "https://github.com/bytebreach/tornet"
Source = "https://github.com/bytebreach/tornet"
Issues = "https://github.com/bytebreach/tornet/issues"
Documentation = "https://tornet.readthedocs.io/"

[project.scripts]
tornet = "tornet.tornet:main"

[tool.setuptools]
packages = ["tornet"]

[tool.setuptools.package-data]
tornet = ["*.txt", "*.md"]
